61 draft method saveContour
